Replace deprecated Number constructions
Use auto-boxing or valueOf when converting from String.

Change-Id: I417acc127d804f38119c1d226e1f9b3c4b7ca037